--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express": "latest",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.3",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "validator": "^13.11.0"
   }
 }
